--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="content">
       <section class="result">
         <div class="result__video-container">
-          <video src="" controls class="result__video" poster=""></video>
+          <video src="some-city" controls class="result__video" poster="poster"></video>
         </div>
         <form class="search-form">
           <fieldset class="search-form__fieldset">
